# AKS

./: CMakeLists.txt  README.md  platformio.ini
config/: STM32F411RETx_FLASH.ld
design/pedestrian_bridge/: design.py
docs/pedestrian_bridge/: concreteproperties_check.py  rcdesign_check.py  report.tex
include/: aks_pin_definitions.h
include/aks_main/: aks_main.h
include/bms/core/: aks_bms_ic.h
include/communication/: aks_can.h  aks_spi.h  aks_telemetry.h  aks_uart.h
include/core/: aks_config.h  aks_core.h  aks_types.h
include/isolation/core/: aks_isolation.h
include/motor_controller/: motor_controller.h
include/safety/: aks_safety.h  aks_security.h
include/utils/: aks_base64.h
src/: CMakeLists.txt  main.c
src/actuators/: aks_battery.c  aks_brake.c  aks_motor.c  aks_steering.c
src/aks_main/core/: aks_main.c
src/bms/core/: aks_bms.c
src/charger/core/: aks_charger.c
src/communication/: aks_can.c  aks_protocol.c  aks_spi.c  aks_telemetry.c  aks_uart.c
src/core/: aks_config.c  aks_core.c  aks_system.c
src/isolation/core/: aks_isolation.c
src/motor_controller/core/: motor_controller.c  motor_controller_f4.c
src/safety/: aks_emergency.c  aks_isolation.c  aks_monitoring.c  aks_safety.c  aks_security.c
src/sensors/: aks_adc.c  aks_current.c  aks_gps.c  aks_temperature.c  aks_voltage.c
src/telemetry/core/: aks_telemetry.c
src/telemetry/data_collection/: telemetry_storage.c
src/utils/: aks_buffer.c  aks_crc.c  aks_logger.c  aks_math.c  aks_queue.c  aks_timer.c
test/: CMakeLists.txt  test_runner.c
test/mocks/: mock_hal.h
